Change primary color and primary dark color to light blue series. For EventListFragment, remove the search button, instead, change keyboard option to actionSearch

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:text="@string/events"
             android:textSize="50sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="#E91E63"
             android:onClick="onEventsBtnClick"/>
     </RelativeLayout>
 
